...
        alert.addAction(retryAction)
        viewController.present(alert, animated: true)
    }
    
    static func showLogoutAlert(in viewController: UIViewController, completion: @escaping () -> Void) {
        let alert = UIAlertController(
            title: "Пока, пока!",
            message: "Уверены, что хотите выйти?",
            preferredStyle: .alert)
        
        let logoutAction = UIAlertAction(title: "Да", style: .default) { _ in
            completion()
        }
        
        let cancelAction = UIAlertAction(title: "Нет", style: .cancel) { _ in }
        
        alert.addAction(logoutAction)
...
