...
                                    <constraint firstAttribute="height" constant="60" id="ufz-HA-hX2"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eiO-ha-LcC">
                                <rect key="frame" x="16" y="724" width="382" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="KVA-Qn-yOd"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
...
                                <connections>
                                    <action selector="didTapShareButton:" destination="kZN-Ne-WPt" eventType="touchUpInside" id="ibW-Mq-yrS"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cHP-3d-iXI">
                                <rect key="frame" x="9" y="57" width="44" height="44"/>
                                <accessibility key="accessibilityConfiguration" identifier="navBackButtonWhite"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="dt1-Xa-w3S"/>
                                    <constraint firstAttribute="width" constant="44" id="hiy-dK-h9W"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="backward"/>
...
