...
    private let userPickImageView: UIImageView = {
        let imageView = UIImageView()
        imageView.contentMode = .scaleAspectFit
        return imageView
    }()
    
    private lazy var logoutButton: UIButton = {
        let button = UIButton()
        button.accessibilityIdentifier = "logoutButton"
        button.setImage(UIImage(resource: .exit), for: .normal)
        button.addTarget(self, action: #selector(logoutTap), for: .touchUpInside)
        return button
    }()
...
